[gd_scene load_steps=50 format=3 uid="uid://dkx41chdlblvm"]

[ext_resource type="Script" uid="uid://bofqdlnkp8a1t" path="res://scenes/game/battle_stage/battle_stage.gd" id="1_1ybse"]
[ext_resource type="Texture2D" uid="uid://cnl8dub7a5egv" path="res://scenes/game/battle_stage/wall_texture.png" id="2_5fcvq"]
[ext_resource type="Texture2D" uid="uid://cthdjn64hfl7r" path="res://icon.svg" id="3_u1udp"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yylj5"]
albedo_texture = ExtResource("2_5fcvq")
uv1_triplanar = true
texture_filter = 0

[sub_resource type="BoxMesh" id="BoxMesh_4xn4m"]
material = SubResource("StandardMaterial3D_yylj5")
size = Vector3(4, 8, 6)

[sub_resource type="Environment" id="Environment_2em46"]
fog_enabled = true
fog_light_color = Color(0.17278, 0.0613303, 0.175375, 1)
fog_density = 0.5497

[sub_resource type="Animation" id="Animation_laqph"]
resource_name = "ENEMY_ATTACK"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySpot:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, -2.5), Vector3(0, 0, -1.3), Vector3(0, 0, -1.3), Vector3(0, 0, -2.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemySpot/EnemySprite:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.466667, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0.785398, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_clh0e"]
resource_name = "ENEMY_DEATH"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySpot:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, -2.5), Vector3(0, 0, -2.5), Vector3(0, -10, -2.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemySpot/EnemySprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -6.28319)]
}

[sub_resource type="Animation" id="Animation_hbjoa"]
resource_name = "ENEMY_HIT"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySpot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-0.2, 0, -2.5), Vector3(0.2, 0, -2.5), Vector3(-0.2, 0, -2.5), Vector3(0.2, 0, -2.5), Vector3(-0.2, 0, -2.5), Vector3(0.2, 0, -2.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemySpot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_5fcvq"]
resource_name = "ENEMY_IDLE"
length = 4.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySpot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.523599, 0), Vector3(0, 0.523599, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemySpot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, -2.5), Vector3(0, 0.1, -2.5), Vector3(0, 0, -2.5), Vector3(0, 0.1, -2.5), Vector3(0, 0, -2.5), Vector3(0, 0.1, -2.5), Vector3(0, 0, -2.5), Vector3(0, 0.1, -2.5), Vector3(0, 0, -2.5)]
}

[sub_resource type="Animation" id="Animation_u1udp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySpot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemySpot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.1, -2.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EnemySpot/EnemySprite:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u1udp"]
_data = {
&"ENEMY_ATTACK": SubResource("Animation_laqph"),
&"ENEMY_DEATH": SubResource("Animation_clh0e"),
&"ENEMY_HIT": SubResource("Animation_hbjoa"),
&"ENEMY_IDLE": SubResource("Animation_5fcvq"),
&"RESET": SubResource("Animation_u1udp")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_odxky"]
animation = &"ENEMY_ATTACK"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7fcjs"]
animation = &"ENEMY_DEATH"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pjel8"]
animation = &"ENEMY_HIT"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mb0h6"]
animation = &"ENEMY_IDLE"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nmwqp"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_aekn8"]
advance_mode = 2
advance_condition = &"enemy_attacked"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gvf2a"]
xfade_time = 0.1
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mf65u"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_enemy_dead"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ab7sp"]
advance_mode = 2
advance_condition = &"enemy_attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ksgs3"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_mf65u"]
states/ENEMY_ATTACK/node = SubResource("AnimationNodeAnimation_odxky")
states/ENEMY_ATTACK/position = Vector2(458.333, 206)
states/ENEMY_DEATH/node = SubResource("AnimationNodeAnimation_7fcjs")
states/ENEMY_DEATH/position = Vector2(440.222, -153)
states/ENEMY_HIT/node = SubResource("AnimationNodeAnimation_pjel8")
states/ENEMY_HIT/position = Vector2(432.667, -28)
states/ENEMY_IDLE/node = SubResource("AnimationNodeAnimation_mb0h6")
states/ENEMY_IDLE/position = Vector2(439.333, 85.6667)
transitions = ["Start", "ENEMY_IDLE", SubResource("AnimationNodeStateMachineTransition_nmwqp"), "ENEMY_IDLE", "ENEMY_HIT", SubResource("AnimationNodeStateMachineTransition_aekn8"), "ENEMY_HIT", "ENEMY_IDLE", SubResource("AnimationNodeStateMachineTransition_gvf2a"), "ENEMY_HIT", "ENEMY_DEATH", SubResource("AnimationNodeStateMachineTransition_mf65u"), "ENEMY_IDLE", "ENEMY_ATTACK", SubResource("AnimationNodeStateMachineTransition_ab7sp"), "ENEMY_ATTACK", "ENEMY_IDLE", SubResource("AnimationNodeStateMachineTransition_ksgs3")]
graph_offset = Vector2(-325, -289)

[sub_resource type="Animation" id="Animation_hkqk2"]
resource_name = "PLAYER_DEATH"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerCamera:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.8, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerCamera:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.523599)]
}

[sub_resource type="Animation" id="Animation_kxkif"]
resource_name = "PLAYER_HURT"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerCamera:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-0.2, 0, 0), Vector3(0.2, 0, 0), Vector3(-0.1, 0, 0), Vector3(0.1, 0, 0), Vector3(-0.05, 0, 0), Vector3(0.05, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ahytf"]
resource_name = "PLAYER_IDLE"
length = 3.0
loop_mode = 2
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerCamera:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.1, 0)]
}

[sub_resource type="Animation" id="Animation_2em46"]
resource_name = "PLAYER_INTRO"
step = 0.01
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerCamera:position:z")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(5, -0.25, 0, 1, -0.0294418, 0, -0.64, 0.00384025, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"battle_stage_ready"],
"method": &"emit_signal"
}]
}

[sub_resource type="Animation" id="Animation_1ybse"]
resource_name = "PLAYER_OUTRO"
step = 0.01
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerCamera:position:z")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 1.07, 0.025802, -9, -0.69, 0.0578804, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="Animation" id="Animation_a033r"]
resource_name = "PLAYER_ZOOM_IN"
length = 0.5
step = 0.05
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerCamera:position:z")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.125, 0, 0, -0.992043, -1, -0.05, -0.0160252, 0.125, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="Animation" id="Animation_ljc2o"]
resource_name = "PLAYER_ZOOM_OUT"
length = 0.5
step = 0.05
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerCamera:position:z")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-1, -0.25, 0, 0, 1.02851, 0, -0.05, -0.000799375, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="Animation" id="Animation_3nvg1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerCamera:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerCamera:position:z")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.125, 0, 0.125, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerCamera:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3nvg1"]
_data = {
&"PLAYER_DEATH": SubResource("Animation_hkqk2"),
&"PLAYER_HURT": SubResource("Animation_kxkif"),
&"PLAYER_IDLE": SubResource("Animation_ahytf"),
&"PLAYER_INTRO": SubResource("Animation_2em46"),
&"PLAYER_OUTRO": SubResource("Animation_1ybse"),
&"PLAYER_ZOOM_IN": SubResource("Animation_a033r"),
&"PLAYER_ZOOM_OUT": SubResource("Animation_ljc2o"),
&"RESET": SubResource("Animation_3nvg1")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_laqph"]
animation = &"PLAYER_DEATH"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hbjoa"]
animation = &"PLAYER_HURT"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1ybse"]
animation = &"PLAYER_IDLE"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5fcvq"]
animation = &"PLAYER_INTRO"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_u1udp"]
animation = &"PLAYER_OUTRO"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_clh0e"]
animation = &"PLAYER_ZOOM_IN"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hkqk2"]
animation = &"PLAYER_ZOOM_OUT"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hbjoa"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_clh0e"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hkqk2"]
advance_mode = 2
advance_condition = &"is_fight_over"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_laqph"]
switch_mode = 2
advance_mode = 2
advance_condition = &"enemy_attacked"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pjel8"]
advance_mode = 2
advance_condition = &"attack_enemy"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mb0h6"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7fcjs"]
advance_mode = 2
advance_condition = &"player_hurt"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_odxky"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_k1inx"]
switch_mode = 2
advance_mode = 2
advance_condition = &"player_dead"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_1ybse"]
states/End/position = Vector2(1076, 95.679)
states/PLAYER_DEATH/node = SubResource("AnimationNodeAnimation_laqph")
states/PLAYER_DEATH/position = Vector2(615.741, -127.667)
states/PLAYER_HURT/node = SubResource("AnimationNodeAnimation_hbjoa")
states/PLAYER_HURT/position = Vector2(615.444, -34.3333)
states/PLAYER_IDLE/node = SubResource("AnimationNodeAnimation_1ybse")
states/PLAYER_IDLE/position = Vector2(614.667, 94.6667)
states/PLAYER_INTRO/node = SubResource("AnimationNodeAnimation_5fcvq")
states/PLAYER_INTRO/position = Vector2(387.16, 94.8148)
states/PLAYER_OUTRO/node = SubResource("AnimationNodeAnimation_u1udp")
states/PLAYER_OUTRO/position = Vector2(861.333, 96.4444)
states/PLAYER_ZOOM_IN/node = SubResource("AnimationNodeAnimation_clh0e")
states/PLAYER_ZOOM_IN/position = Vector2(386.222, 371.333)
states/PLAYER_ZOOM_OUT/node = SubResource("AnimationNodeAnimation_hkqk2")
states/PLAYER_ZOOM_OUT/position = Vector2(768, 366)
states/Start/position = Vector2(212.667, 94.2222)
transitions = ["Start", "PLAYER_INTRO", SubResource("AnimationNodeStateMachineTransition_hbjoa"), "PLAYER_INTRO", "PLAYER_IDLE", SubResource("AnimationNodeStateMachineTransition_clh0e"), "PLAYER_IDLE", "PLAYER_OUTRO", SubResource("AnimationNodeStateMachineTransition_hkqk2"), "PLAYER_ZOOM_IN", "PLAYER_ZOOM_OUT", SubResource("AnimationNodeStateMachineTransition_laqph"), "PLAYER_IDLE", "PLAYER_ZOOM_IN", SubResource("AnimationNodeStateMachineTransition_pjel8"), "PLAYER_ZOOM_OUT", "PLAYER_IDLE", SubResource("AnimationNodeStateMachineTransition_mb0h6"), "PLAYER_IDLE", "PLAYER_HURT", SubResource("AnimationNodeStateMachineTransition_7fcjs"), "PLAYER_HURT", "PLAYER_IDLE", SubResource("AnimationNodeStateMachineTransition_odxky"), "PLAYER_HURT", "PLAYER_DEATH", SubResource("AnimationNodeStateMachineTransition_k1inx")]
graph_offset = Vector2(185, 25)

[node name="BattleStage" type="Node3D"]
script = ExtResource("1_1ybse")

[node name="DungeonMesh" type="CSGCombiner3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
use_collision = true

[node name="RoomPieces" type="CSGMesh3D" parent="DungeonMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)
flip_faces = true
mesh = SubResource("BoxMesh_4xn4m")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_2em46")

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 2, 0)
spot_range = 4.97841
spot_attenuation = -1.31
spot_angle = 39.6113

[node name="EnemySpot" type="Marker3D" parent="."]
transform = Transform3D(0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0, 0.1, -2.5)

[node name="EnemySprite" type="Sprite3D" parent="EnemySpot"]
pixel_size = 0.05
shaded = true
texture_filter = 2
texture = ExtResource("3_u1udp")

[node name="EnemyAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_u1udp")
}

[node name="EnemyAnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_mf65u")
anim_player = NodePath("../EnemyAnimationPlayer")
parameters/conditions/enemy_attack = false
parameters/conditions/enemy_attacked = false
parameters/conditions/is_enemy_dead = false

[node name="PlayerCamera" type="Camera3D" parent="."]
fov = 90.0

[node name="SpotLight3D" type="SpotLight3D" parent="PlayerCamera"]
spot_range = 5.77029
spot_angle = 53.4375

[node name="PlayerAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_3nvg1")
}

[node name="PlayerAnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_1ybse")
anim_player = NodePath("../PlayerAnimationPlayer")
parameters/conditions/attack_enemy = false
parameters/conditions/enemy_attacked = false
parameters/conditions/is_fight_over = false
parameters/conditions/player_dead = false
parameters/conditions/player_hurt = false
